# surface_perception

./: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  package.xml  rosdoc.yaml
include/surface_perception/: axes_marker.h  object.h  segmentation.h  shape_extraction.h  surface.h  surface_finder.h  surface_history_recorder.h  surface_objects.h  visualization.h
src/: .shape_extraction.cpp.swp  axes_marker.cpp  demo_main.cpp  segmentation.cpp  shape_extraction.cpp  surface_finder.cpp  surface_history_recorder.cpp  visualization.cpp
test/: rotation_matrix_test.cpp  rotation_matrix_test_main.cpp
