<?xml version="1.0"?>
<package>
  <name>surface_perception</name>
  <version>0.0.0</version>
  <description>Simple library for segmentation of tabletop and shelf surfaces</description>

  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/surface_perception</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
